hphp/test/slow/native-autoload-duplicates/autoload-duplicates.php.expectf

Fatal error: Call to undefined function test_duplicate_fn() in %s on line 6

Fatal error: Call to undefined function test_duplicate_fn() in %s on line 6
